# ChangeLog for app-emulation/uade
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/uade/ChangeLog,v 1.5 2004/06/08 20:00:48 dholm Exp $

  08 Jun 2004; David Holm <dholm@gentoo.org> uade-0.81.ebuild:
  Added to ~ppc.

  13 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> uade-0.81.ebuild:
  Marking stable on x86.  No bug reports in 99 days.

*uade-0.81 (05 Jan 2004)

  05 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml,
  uade-0.73.ebuild, uade-0.80.ebuild, uade-0.81.ebuild:
  version bump; date updates

*uade-0.80 (27 Aug 2003)

  27 Aug 2003; Michael Sterrett <msterret@gentoo.org> uade-0.80.ebuild:
  version bump

*uade-0.73 (27 Aug 2003)

  27 Aug 2003; Michael Sterrett <msterret@gentoo.org> uade-0.73.ebuild:
  initial commit; bug 25886 (at least, part of that bug)
