@@ -1,8 +1,4 @@
-MD5 ca86528a8806ddc8105933885b52d062 ChangeLog 874
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 230fbf310d68ddd93422e544b0775dc2 uade-0.73.ebuild 1343
-MD5 13e1c3cd1951f8e60909bd72b01dcb77 uade-0.80.ebuild 1343
+MD5 ef640c38762f1a3318c7779f6b845dc3 ChangeLog 994
 MD5 93a3f1ef952a6fad192cd165b80de14d uade-0.81.ebuild 1614
-MD5 b56030cf3a179479fa1bf7c8f6d491de files/digest-uade-0.73 63
-MD5 5563daa00b4f95d50be5c039950d0cca files/digest-uade-0.80 63
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 4df754504fa84b727b0d21eccfcbf1c5 files/digest-uade-0.81 63
