@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/uade
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/uade/ChangeLog,v 1.5 2004/06/08 20:00:48 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/uade/ChangeLog,v 1.6 2004/06/15 03:03:02 mr_bones_ Exp $
+
+  14 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> uade-0.73.ebuild,
+  uade-0.80.ebuild:
+  clean older ebuilds
 
   08 Jun 2004; David Holm <dholm@gentoo.org> uade-0.81.ebuild:
   Added to ~ppc.
